Basic working game, Some from After Las Video

--- a/index.html
+++ b/index.html
@@ -13,27 +13,31 @@
 <body>
    <div class="customers">
       <div class="customerTooltipParent">
-         <img id="customer1" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template" src="">
-         <span class="customerTooltip"><img id="customer1-demands" class="cutomer-demands" src=""></span>
+         <img id="customer1" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template">
+         <span class="customerTooltip"><img id="customer1-demands" class="cutomer-demands"></span>
       </div>
       <div class="customerTooltipParent">
-         <img id="customer2" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template" src="">
+         <img id="customer2" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template">
+         <span class="customerTooltip"><img id="customer2-demands" class="cutomer-demands"></span>
       </div>
       <div class="customerTooltipParent">
-         <img id="customer3" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template" src="">
+         <img id="customer3" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template">
+         <span class="customerTooltip"><img id="customer3-demands" class="cutomer-demands"></span>
       </div>
       <div class="customerTooltipParent">
-         <img id="customer4" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template" src="">
+         <img id="customer4" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template">
+         <span class="customerTooltip"><img id="customer4-demands" class="cutomer-demands"></span>
       </div>
       <div class="customerTooltipParent">
-         <img id="customer5" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template" src="">
+         <img id="customer5" ondrop="drop(event)" ondragover="allowDrop(event)" class="customer-template">
+         <span class="customerTooltip"><img id="customer5-demands" class="cutomer-demands"></span>
       </div>
    </div>
    <div class="moneyCounter">
       <img id="money1" onclick="earnMoney(1)" ondrop="drop(event)" ondragover="allowDrop(event)" class="money-template" src="Images/Money/goldCoin.svg">
       <img id="money2" onclick="earnMoney(2)" ondrop="drop(event)" ondragover="allowDrop(event)" class="money-template" src="Images/Money/goldCoin.svg">
       <img id="money3" onclick="earnMoney(3)" ondrop="drop(event)" ondragover="allowDrop(event)" class="money-template" src="Images/Money/goldCoin.svg">
-      <img id="money4" onlick="earnMoney(4)" ondrop="drop(event)" ondragover="allowDrop(event)" class="money-template" src="Images/Money/goldCoin.svg">
+      <img id="money4" onclick="earnMoney(4)" ondrop="drop(event)" ondragover="allowDrop(event)" class="money-template" src="Images/Money/goldCoin.svg">
       <img id="money5" onclick="earnMoney(5)" ondrop="drop(event)" ondragover="allowDrop(event)" class="money-template" src="Images/Money/goldCoin.svg">
    </div>
    <div class="customer-counter"></div>
