--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
    <div class="stove">
       <div id="pan1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
       <div id="pan2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-      <div class="pan2Lock" title="Cost 25$ to unlock (double click to purchase)" ondblclick="if (cashValues.money >= 25) { hideObj(`.pan2Lock`); }"><img src="Images/lock.svg"></div>
+      <div class="pan2Lock" title="Cost 25$ to unlock (double click to purchase)" ondblclick="if (cashValues.money >= 25) { cashValues.money -= 25; hideObj(`.pan2Lock`); }"><img src="Images/lock.svg"></div>
    </div>
-   <div id="trsh-cn" ondrop="drop(event)" ondragover="allowDrop(event)"><p style="pointer-events: none;">Trash <br> Cn</p></div>
+   <div id="trsh-cn" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
 
    <img onmouseover="createNewSteak()" ondragstart="return false" class="rw-stk-strg" src="Images/raw-steak-storage.svg">
    <img onmouseover="createNewBread()" ondragstart="return false" class="bgr-brd-strg" src="Images/burger-bread-storage.svg">
